--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Index</title>
-    <meta http-equiv='refresh' content='0; URL=Default.aspx'>
+    <meta http-equiv='refresh' content='0; URL=.\Default.aspx'>
 </head>
 <body>
    
